added search filter function and remove unnecessary files

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.App input {
+  margin: 20px 0 20px 0;
+  padding-left: 20px;
+  width: 300px;
+  height: 40px;
+  font-size: 18px;
+  border-radius: 30px;
+  box-shadow: 3px 3px #ccc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App table {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table th {
+  background-color: #ccc;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  padding: 10px;
+  border: 1px solid #eee;
 }
